k8s/tc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tysoncloud
  labels:
    app: tysoncloud
spec:
  selector:
    matchLabels:
      app: tysoncloud
  template:
    metadata:
      labels:
        app: tysoncloud
    spec:
      containers:
        - name: payme
          image: timmijinks/payme
          ports:
            - containerPort: 3000
