k8s/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-flux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-b
  namespace: test-flux
spec:
  selector:
    matchLabels:
      app: test-b
  template:
    metadata:
      labels:
        app: test-b
    spec:
      containers:
        - name: test-b
          image: nginx
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 1
