k8s/tc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tysoncloud
spec:
  selector:
    app: tysoncloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
